--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Projects by Suhail Khan">
     <!-- Define title -->
-    <title>Tanmay Hinge</title>
+    <title>Projects</title>
 
     <!-- Include favicon. Use, e.g., https://favicon.io/ -->
     <link rel="icon" type="image/png" href="favicon.png" sizes="32x32" />
